@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006-2007 Douglas Gilbert.
+ * Copyright (c) 2006-2008 Douglas Gilbert.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -45,9 +45,10 @@
 #define I_MPT 2
 #define I_SGV4 4
 
-int smp_initiator_open(const char * device_name, int subvalue,
-                       const char * i_params, unsigned long long sa,
-                       struct smp_target_obj * tobj, int verbose)
+int
+smp_initiator_open(const char * device_name, int subvalue,
+                   const char * i_params, unsigned long long sa,
+                   struct smp_target_obj * tobj, int verbose)
 {
     int force = 0;
     char * cp;
@@ -146,8 +147,9 @@ err_out:
     return -1;
 }
 
-int smp_send_req(const struct smp_target_obj * tobj,
-                 struct smp_req_resp * rresp, int verbose)
+int
+smp_send_req(const struct smp_target_obj * tobj,
+             struct smp_req_resp * rresp, int verbose)
 {
     if ((NULL == tobj) || (0 == tobj->opened)) {
         if (verbose)
@@ -177,7 +179,8 @@ int smp_send_req(const struct smp_target_obj * tobj,
     }
 }
 
-int smp_initiator_close(struct smp_target_obj * tobj)
+int
+smp_initiator_close(struct smp_target_obj * tobj)
 {
     int res;
 
@@ -204,9 +207,10 @@ int smp_initiator_close(struct smp_target_obj * tobj)
 
 #define I_MPT 2
 
-int smp_initiator_open(const char * device_name, int subvalue,
-                       const char * i_params, unsigned long long sa,
-                       struct smp_target_obj * tobj, int verbose)
+int
+smp_initiator_open(const char * device_name, int subvalue,
+                   const char * i_params, unsigned long long sa,
+                   struct smp_target_obj * tobj, int verbose)
 {
     int force = 0;
     char * cp;
@@ -266,8 +270,9 @@ err_out:
     return -1;
 }
 
-int smp_send_req(const struct smp_target_obj * tobj,
-                 struct smp_req_resp * rresp, int verbose)
+int
+smp_send_req(const struct smp_target_obj * tobj, struct smp_req_resp * rresp,
+             int verbose)
 {
     if ((NULL == tobj) || (0 == tobj->opened)) {
         if (verbose)
@@ -284,7 +289,8 @@ int smp_send_req(const struct smp_target_obj * tobj,
     }
 }
 
-int smp_initiator_close(struct smp_target_obj * tobj)
+int
+smp_initiator_close(struct smp_target_obj * tobj)
 {
     int res;
 
